--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "mssql": "^11.0.1",
     "nodemon": "^3.1.10",
+    "rimraf": "^6.0.1",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
