--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mssql": "^11.0.1",
     "nodemon": "^3.1.10",
     "rimraf": "^6.0.1",
+    "sequelize": "^6.37.7",
+    "tedious": "^18.6.1",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
