--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/mssql": "^9.1.5",
     "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mssql": "^11.0.1",
     "rimraf": "^6.0.1",
